2011-09-01  Anton Kovalenko  <anton@sw4me.com>

	* slime-c-p-c.el (slime-complete-symbol*-fancy-bit): "imitate" a
	close-paren, or a space, with exec-kbd-macro instead of inserting
	them. Makes slime-complete-symbol*-fancy compatible with paredit
	and probably other smart or "electric" stuff that could be bound
	to these keys.

2011-08-30  Nikodemus Siivola  <nikodemus@random-state.net>

	* slime-repl.el	(slime-repl-suppress-prompt): New variable. Bind to T to
	temporarily suppress the prompt.
	(slime-eval-last-expression-in-repl): New command. Sends form from
	another buffer to REPL for evaluation.
	(slime-mode-map): Bind slime-eval-last-expression-in-repl to C-c C-j.

2011-08-05  Nikodemus Siivola  <nikodemus@random-state.net>

	* swank-indentation.lisp (macro-indentation): Tweak so that
	things that could be bindings are indented by 1, not 4.

2011-07-27  Nikodemus Siivola  <nikodemus@random-state.net>

	* slime-cl-indent.el: Tweak COND indentation.
	* slime-cl-indent-test.txt: Tests 48 and 49.

2011-06-21  Nikodemus Siivola  <nikodemus@random-state.net>

	* slime-cl-indent.el (lisp-loop-indent-forms-like-keywords): Fix type error.
	(common-lisp-style-default): Fix type error, move to after styles have been
	defined so as to be able to offer a menu for picking the predefined styles.
	("sbcl"): Oops! It's (as ...) not (:as ...). Also add couple of missing defining
	forms.

2011-06-16  Nikodemus Siivola  <nikodemus@random-state.net>

	* swank-indentation.lisp (macro-indentation): More complex
	version than the default. Fixes some of the misbehaviour of
	the previous complex version.

2011-06-15  Stas Boukarev  <stassats@gmail.com>

	* slime-scheme.el (slime-scheme-indentation-update):
	`slime-indentation-update-hooks' now requires functions to accept
	three arguments. Add `packages' parameter.

2011-06-14  Nikodemus Siivola  <nikodemus@random-state.net>

	WITH-COMPILATION-UNIT indentation.

	* slime-cl-indent.el: Add indentation method.
